--- a/css/dialog.css
+++ b/css/dialog.css
@@ -12,7 +12,6 @@
 {
     width: 30%;
     height: 20%;
-    border-radius: 2.5pt;
     position: absolute;
     left: 35%;
     top: 40%;
@@ -22,9 +21,8 @@
 .dialog_msg
 {
     float: left;
-    width: 95%;
-    margin: 2.5%;
-    height: 65%;
+    width: 100%;
+    height: 70%;
     overflow-x: hidden;
     overflow-y: auto;
     background: white;
@@ -38,6 +36,7 @@
     color: white;
     background-color: #1ba97b;
     border: 0pt;
+    display: inline-block;
     border-top: solid 1pt #1db684;
     cursor: pointer;
 }
